--- a/languages/llms-txt-generator-pt_BR.po
+++ b/languages/llms-txt-generator-pt_BR.po
@@ -1,21 +1,22 @@
 # Copyright (C) 2025 Dante Testa
 # This file is distributed under the GPL-2.0+.
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: LLMS.txt Generator 1.0.0\n"
-"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/llms-txt-generator\n"
-"Last-Translator: Dante Testa <contato@dantetesta.com.br>\n"
-"Language-Team: PT_BR\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/llms-txt-"
+"generator\n"
+"Last-Translator: \n"
+"Language-Team: Portuguese (Brazil)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "POT-Creation-Date: 2025-07-18 04:49+0000\n"
-"PO-Revision-Date: 2025-07-18 00:00+0000\n"
-"Language: pt_BR\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"PO-Revision-Date: 2025-07-18 04:58+0000\n"
 "X-Generator: Loco https://localise.biz/\n"
 "X-Domain: llms-txt-generator\n"
+"Language: pt_BR\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Loco-Version: 2.8.0; wp-6.8.2; php-8.2.23"
 
 #: templates/admin-page.php:396
 msgid ""
